--- a/style.css
+++ b/style.css
@@ -87,3 +87,84 @@ body {
     margin-bottom: 0px;
     margin-left: auto;
 }
+
+#video {
+    display: flex;
+}
+
+#advertisment-buttons {
+    flex-grow: 1;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 80px;
+    max-width: 1440px;
+    margin-top: 0px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto;
+    font-weight: bold;
+}
+
+.fi-rr-shopping-cart {
+    padding-top: 6px;
+    font-size: 25px;
+    text-decoration: none;
+}
+
+.fi-rr-search {
+    font-size: 25px;
+    text-decoration: none;
+    position: absolute;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 30px;
+    width: 60px;
+}
+
+.icons {
+    text-decoration: none;
+}
+
+.btn {
+    font-size: 20px;
+    border-radius: 15px;
+    padding: 15px 30px 15px 30px;
+    background-color: #F7544A;
+}
+
+a:visited {
+    color: black;
+  }
+
+a:link {
+    text-decoration: none;
+    color: black;
+  }
+
+#search-contain {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+#search {
+    justify-content: center;
+    font-size: 20px;
+    background: transparent;
+    width: 20px;
+    height: 20px;
+    padding: 20px;
+    border-radius: 30px;
+    border: none;
+    color: black;
+    cursor: pointer;
+    transition: background-color 0.3s ease, width 0.3s ease;;
+    &:focus {
+        outline: none;
+    }
+}
